--- a/latex/matter/abstract.tex
+++ b/latex/matter/abstract.tex
@@ -1,3 +1,3 @@
 \begin{abstract}
-ABSTRACT
+Todo: Skrive abstract intro og konklusjon. Forbedre tittler. Se over etter skrivefeil og rare formuleringer.
 \end{abstract}
