--- a/latex/matter/classifier.tex
+++ b/latex/matter/classifier.tex
@@ -77,9 +77,9 @@ where $C$ is a regularization parameter to avoid over-fitting. Other than using 
 
 So far the classification methods that have been described can only differentiate two classes. This is a problem since a general language identification problem will have numerous classes. There exists generalizations of the classifiers that we have discussed that support multiple classes \cite[p. 209]{machinelearningbook,hsu2002comparison}, but these are often avoided due to the additional training time required \cite{hsu2002comparison}. A more commonly used approach is to train multiple classifiers on different classes, and then fuse the results to scores for each language. The merging of the results can be done by training gaussian mixtures discussed in seciton \ref{sect:gmmscore} to recognize the typical scores from equation \ref{svmeucdist} or the probability scores for the positive class when using LR.
 
-With $N$ classes, the \emph{One vs Rest} (OVR) approach is to train $N$ classifiers. Each of the classes will act as the $+1$ class in one classifier, and the $-1$ class in all the other classifiers. The pattern in the scores that should emerge from such a setup is that the classifier trained with a document's true class as $+1$ class should give the highest score \ref{hsu2002comparison}. This means that without backend calibration of the scores, a simple way to perform language identification would be to label a vector to belong to the $+1$ class of the classifier that gave the highest score.
+With $N$ classes, the \emph{One vs Rest} (OVR) approach is to train $N$ classifiers. Each of the classes will act as the $+1$ class in one classifier, and the $-1$ class in all the other classifiers. The pattern in the scores that should emerge from such a setup is that the classifier trained with a document's true class as $+1$ class should give the highest score \ref{hsu2002comparison}. This means that without backend calibration of the scores, a simple way to perform language identification would be to label a vector to belong to the $+1$ class of the classifier that gave the highest score. This is known as max-score wins OVR classification.
 
-Another approach to multiclass classification is to train $N(N-1)/2$ classifiers in a $One vs One$ (OVO) pattern. One classifier is then trained for all pairs of classes \cite{hsu2002comparison}. Each class is then tested against the $n-1$ other classes as either the positive or negative class. Identification without performing score calibration can be performed by either selecting the class that won most of it's $n-1$ trials \cite{hsu2002comparison}.
+Another approach to multiclass classification is to train $N(N-1)/2$ classifiers in a $One vs One$ (OVO) pattern. One classifier is then trained for all pairs of classes \cite{hsu2002comparison}. Each class is then tested against the $n-1$ other classes as either the positive or negative class. Identification without performing score calibration can be performed by either selecting the class that won most of it's $n-1$ trials \cite{hsu2002comparison} or the language that recieved the highest sum of scores.
 
 Although there are more classifiers to train in the OVO approach, this setup should still be faster to train since each classifier require only documents from two classes \cite[832]{lidbok}. The performance of the two methods should be comparable \cite{Rifkin:2004:DOC:1005332.1005336}.
 
