--- a/latex/matter/implbasic.tex
+++ b/latex/matter/implbasic.tex
@@ -37,11 +37,12 @@ For each language or dialect there is about 60 hours of speech. Approximately 50
 
 For the final evaluation of the systems the 2003 NIST Language Recognition Evaluation set was used \footnote{\url{http://www.itl.nist.gov/iad/mig/tests/lre/2003/}}. By using a standardized test set, we can easily compare the performance of our system with others. The NIST set mostly includes data collected for (but not used in) the CallFriend corpus \cite{martin2003nist} so the conditions for the test segments should be similar to the training data. The NIST set includes the same twelve target languages that were included in the training set given in table \ref{tab:callfriend}. The set also includes out of set utterances in Russian. The Russian segments can be used to test the systems ability to recognize if any of the trained languages were spoken at all. In accordance with the evaluation rules \cite{martin2003nist}, no attempts were made to prepare the system specifically for Russian out of set segments.
 
-The NIST set includes data of 3, 10 and 30 seconds duration of speech. While our main focus has been on the 30 second segments, we will report results for the other segment lengths as well. The segment lengths were enforced by using an automatic speech activity algorithm to split utterances to the correct size. For each language and duration more than 80 segments from 40 speakers were provided. 
+The NIST set includes data of 3, 10 and 30 seconds duration of speech. While our main focus has been on the 30 second segments, we will report results for the other segment lengths as well. The segment lengths were enforced by using an automatic speech activity algorithm to split utterances to the correct size. For each language and duration at least 80 segments from 40 speakers were provided. 
 
 \section{Phoneme Transcription}
+\label{sect:phonetranscription}
 
-Phoneme transcription for all the systems were performed using the Brno University of Technology (BUT) phoneme recognizer \footnote{\url{http://speech.fit.vutbr.cz/software/phoneme-recognizer-based-long-temporal-context}}. The recognizers utilizes the long temporal context features as explained in section \ref{sect:phnrec}. The phoneme recognizer was trained on Hungarian utterances and has previously performed well on language recognition tasks \cite{lrivector, torres2008mitll}. The phoneme recognizer is trained distinguish $62$ classes. The high number of classes can make training material sparse when using higher order $n$-grams. In order to reduce the sparsity any token labeled as noise were ignored, and consecutive tokens of silence were stripped to just one token. Experiments were also performed using a many-to-one token mapping suggested in \cite{torres2008mitll}. With this mapping, information about phoneme duration is ignored resulting in only $32$ different tokens. This mapping can severly reduce the training time for some of the systems.
+Phoneme transcription for all the systems were performed using the Brno University of Technology (BUT) phoneme recognizer \footnote{\url{http://speech.fit.vutbr.cz/software/phoneme-recognizer-based-long-temporal-context}}. The recognizers utilizes the long temporal context features as explained in section \ref{sect:phnrec}. The phoneme recognizer was trained on Hungarian utterances and has previously performed well on language recognition tasks \cite{lrivector, torres2008mitll}. The phoneme recognizer is trained distinguish $62$ classes. The high number of classes can make training material sparse when using higher order $n$-grams. In order to reduce the sparsity any token labeled as noise were ignored, and consecutive tokens of silence were stripped to just one token. Experiments were also performed using a many-to-one token mapping suggested in \cite{torres2008mitll}. With this mapping, information about phoneme duration is ignored resulting in only $32$ different tokens. By itself, we expect this loss of information to negatively impact the performance of the system. However, this mapping can severly reduce the training time for some of the systems. This could potentially mean that we could train the systems with more data, or use higher-order $n$-grams.
 
 After utterances have been transcribed, we split the transcription into parts so that e.g. the length of a development set utterance match the length of the test set utterances. Since the system's performance should be dependent on the utterance length, this should make development scores more closely approximate the score we would expect during final evaluations. 
 
@@ -53,7 +54,9 @@ For processing of the score-vectors we used the Focal Multiclass Toolkit \footno
 
 For each language, a single Gaussian Multivariate Model was trained. We followed the recommandation given in \cite[p. 70]{matejkalre} to treat dialects as separate languages in the rest of the system, and fuse the scores for these languages in the backend. This makes the single Gaussian Model an obvious source of bias error, since we expect that score-vectors from utterances of different dialects will be located in separate clusters of score-vectors. On the other hand, we could easily end up with an over-fitted model if we were to represent languages with Gaussian Mixtures. 
 
-The Gaussian backend was also responsible for recognizing the out of set language in the evaluation set. If we assume that the 
+\subsection{Universal Background Model for Out-of-Set Languages}
+
+The Gaussian backend was also responsible for recognizing the out-of-set language in the evaluation set. It would be possible to train a language model to distinguish most other languages from the target languages. This approach was taken in \ref[p. 55]{matejkalre} with good results, but it would require training material for an ensemble of out-of-set languages. For our systems, we make the assumption that the score vector from an out-of-set language will be contained in the same region in the score-space as utterances from all the target languages. We train an Universal Background Model (UBM) using all the development data from target languages. The UBM is just another Gaussian Mixture that can then synthesize utterances for any language. Due to the risks of over-fitting, a single Gaussian component was used for the out-of-set language as well. Since the single Gaussian component has to model score-vectors from more than one language, we expect this component to have a higher variance than the components for single languages. This means that the model will give a target language higher likelihood than the UBM if an unknown utterance is scored close to the mean of a "single-language" component. Thus the UBM creates the desired effect of requireing some confidence before we assign an utterance to any target language at all. Still, this simplification is expected to degrade the performance of the system.
 
 \section{Baseline System}
 
