--- a/latex/oppgave.tex
+++ b/latex/oppgave.tex
@@ -1,7 +1,6 @@
 \documentclass[10pt,b5report,twoside]{thesis}
 \usepackage{rotating}
 
-
 \begin{document}
 
 \frontmatter
@@ -26,6 +25,7 @@
 
 \part{implementation}
 \input{matter/implbasic}
+\input{matter/implivector}
 
 \part{results}
 
@@ -36,5 +36,6 @@
 
 \appendix
 \input{matter/AmathProof}
+\input{matter/Aalgorithms}
 
 \end{document}
