--- a/latex/references.bib
+++ b/latex/references.bib
@@ -170,7 +170,19 @@
   year={2008},
   pages={719-723}
 }
-
+@Article{liblinear,
+  	author = {Rong-En Fan and Kai-Wei Chang and Cho-Jui Hsieh and Xiang-Rui Wang and Chih-Jen Lin},
+  	title = {{LIBLINEAR}: A Library for Large Linear Classification},
+ 	 journal = {Journal of Machine Learning Research},
+  	year = {2008},
+ 	 volume = {9},
+  	pages = {1871--1874}
+}
+@misc{practicalsvm,
+	Author = {Chih-Wei Hsu and Chih-Chung Chang and Chih-Jen Lin},
+	title = {A practical guide to support vector classification},
+	howpublished= {\url{http://www.csie.ntu.edu.tw/~cjlin/papers/guide/guide.pdf}, visited 12th of June 2012}
+}
 
 
 
@@ -257,13 +269,6 @@
 	Title = {Efficient Language Identification using Anchor Models and Support Vector Machines},
 	Year = {2006},
 	Howpublished = {Proc. Odyssey}}
-@Article{liblinear,
-  	author = {Rong-En Fan and Kai-Wei Chang and Cho-Jui Hsieh and Xiang-Rui Wang and Chih-Jen Lin},
-  	title = {{LIBLINEAR}: A Library for Large Linear Classification},
- 	 journal = {Journal of Machine Learning Research},
-  	year = {2008},
- 	 volume = {9},
-  	pages = {1871--1874}}
 @misc{universalLI,
 	Author = {Sabato Marco Siniscalchi AND Jeremy Reed AND Torbjørn Svendsen AND Chin-Hui Lee},
 	Title = {Exploiting Context-Dependency and Acoustic Resolution of Universal Speech Attribute Models in Spoken Language Recognition},
